refining early date analysis

--- a/Modelling/Removing Early Dates.ipynb
+++ b/Modelling/Removing Early Dates.ipynb
@@ -17,37 +17,19 @@
     "\n",
     "Almost all weeks were within two standard deviations from the mean. \n",
     "\n",
-    "In conclusion, to be safe we excluded all data from the first 8 weeks. Our threshold for what is considered \"abnormally low\" was to be only one standard deviation away, but there is no shortage of data for us to consider for our analysis so we are safe to exclude data. "
+    "In conclusion, to be safe we excluded all data from the first 8 weeks based on our first analysis. Our threshold for what is considered \"abnormally low\" was to be only one standard deviation away, but there is no shortage of data for us to consider for our analysis so we are safe to exclude more data than we need to. \n",
+    "\n",
+    "For our second analysis we ran some t-tests to confirm that it was prudent to exclude the first 8 weeks. We ran some t-tests and saw that the first 30 days had significantly lower mean views than the overall population mean views, and so did days 30-60, and so did days 60-90, but not further than that. \n",
+    "\n",
+    "To be prudent, then, we excluded the first 90 days from our data. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "id": "1d398fcb-cc13-4ad3-893d-8a8d2e19c8be",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        0\n",
-       "1        0\n",
-       "2        0\n",
-       "3        0\n",
-       "4        0\n",
-       "        ..\n",
-       "15041    0\n",
-       "15042    0\n",
-       "15043    0\n",
-       "15044    0\n",
-       "15045    0\n",
-       "Name: hasAdinTitle, Length: 15046, dtype: int64"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -62,8 +44,7 @@
     "\n",
     "\n",
     "df['hasAdinTitle'] = df['title'].str.lower().str.contains('ad|sponsored|collaboration|promo|partner|affiliate|paid|gift', case=False, na=False).astype(int)\n",
-    "df['hasAdinText'] = df['text'].str.lower().str.contains('ad|sponsored|collaboration|promo|partner|affiliate|paid|gift', case=False, na=False).astype(int)\n",
-    "df["
+    "df['hasAdinText'] = df['text'].str.lower().str.contains('ad|sponsored|collaboration|promo|partner|affiliate|paid|gift', case=False, na=False).astype(int)"
    ]
   },
   {
@@ -76,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "75ddb3cc-c5c2-4a7c-b378-436bd733a819",
    "metadata": {},
    "outputs": [
@@ -198,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "c75ac46c-ddec-4fe4-9970-3a0d705dba00",
    "metadata": {},
    "outputs": [],
@@ -208,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "13ced328-49c1-445e-96c9-1b9e745c2355",
    "metadata": {},
    "outputs": [
@@ -248,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "ada42495-a8aa-4b0e-9496-b4b2cf37b906",
    "metadata": {},
    "outputs": [
@@ -276,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "06f0e33e-bbd5-4f4d-b445-808e8d4d8f87",
    "metadata": {},
    "outputs": [
@@ -286,7 +267,7 @@
        "np.float64(181734.74856885787)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "86ab744d-2e70-4ca9-8142-7ad9c415059f",
    "metadata": {},
    "outputs": [
@@ -490,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "16d58f13-6958-4671-ae26-41d2d1789acd",
    "metadata": {},
    "outputs": [],
@@ -500,20 +481,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
+   "id": "97353dc5-4efc-4ba7-afda-ba6cec93c2da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0002453163962190983\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Now we want to run some T-Tests to see if the first two months or so are significantly lower. \n",
+    "#We want to be careful not to run too many t-tests. So we don't want, for example, to run a t-test for every single day or every single week. \n",
+    "\n",
+    "import scipy.stats as stats\n",
+    "\n",
+    "first_month_df =df.loc[  (df[\"datetime_date\"] <= (march_1_2025 - datetime.timedelta(days = (0)*30)) ) & (df[\"datetime_date\"] >= (march_1_2025 - datetime.timedelta(days = 1*30))) ]\n",
+    "\n",
+    "overall_pop = df[\"viewCount\"] \n",
+    "first_month = first_month_df[\"viewCount\"]\n",
+    "\n",
+    "t_stat, p_value = stats.ttest_ind( overall_pop, first_month ) \n",
+    "print(p_value) \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31a2253e-ee31-4e5b-ae22-f197ea529662",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Conclusion: Yes, the first month has significantly lower views! Now let's look at the second month. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "28fc7c5b-4414-4045-9e7d-4704640e2e1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.001338342043096389\n"
+     ]
+    }
+   ],
+   "source": [
+    "second_month_df =df.loc[  (df[\"datetime_date\"] <= (march_1_2025 - datetime.timedelta(days = (1)*30)) ) & (df[\"datetime_date\"] >= (march_1_2025 - datetime.timedelta(days = 2*30))) ]\n",
+    "\n",
+    "overall_pop = df[\"viewCount\"] \n",
+    "second_month = second_month_df[\"viewCount\"]\n",
+    "\n",
+    "t_stat, p_value = stats.ttest_ind( overall_pop, second_month ) \n",
+    "print(p_value) \n",
+    "\n",
+    "#Conclusion: Yes, so does the second month. You can see the p-value is much lower though so views are improving."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "6cdd4195-a7f5-4365-a3b2-d659cb2f035e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.03388718914053723\n"
+     ]
+    }
+   ],
+   "source": [
+    "third_month_df =df.loc[  (df[\"datetime_date\"] <= (march_1_2025 - datetime.timedelta(days = (2)*30)) ) & (df[\"datetime_date\"] >= (march_1_2025 - datetime.timedelta(days = 3*30))) ]\n",
+    "\n",
+    "overall_pop = df[\"viewCount\"] \n",
+    "third_month = third_month_df[\"viewCount\"]\n",
+    "\n",
+    "t_stat, p_value = stats.ttest_ind( overall_pop, third_month ) \n",
+    "print(p_value) \n",
+    "\n",
+    "#Conclusion: Yes, going into the third month, views are a little lower. But just barely does this pass the t-test. Let's break up the third month into\n",
+    "#weeks to refine our analysis. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "bf459c1d-588e-42e9-9d2e-d60a2b928be4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1228336792344012\n",
+      "0.1370786283425824\n",
+      "0.10241759567464025\n",
+      "0.211680153064299\n",
+      "0.1602279988493531\n",
+      "0.10597476134539102\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(6, 12):\n",
+    "    new_df =df.loc[  (df[\"datetime_date\"] <= (march_1_2025 - datetime.timedelta(days = (n-1)*7)) ) & (df[\"datetime_date\"] >= (march_1_2025 - datetime.timedelta(days = n*7))) ]\n",
+    "    new_df_views = new_df[\"viewCount\"]\n",
+    "    t_stat, p_value = stats.ttest_ind( overall_pop, new_df_views ) \n",
+    "    print(p_value) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eee231fc-6216-4406-9af7-4107324a2b0f",
+   "metadata": {},
+   "source": [
+    "I don't really know how to interpret this. I would have expected since months 2-3 had lower views, that at least one of the weekly tests would have passed. It probably has to do with the sample size being much lower per test. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "41e17db2-31f6-40a3-8bb0-a718943ec026",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.21582448617684144\n"
+     ]
+    }
+   ],
+   "source": [
+    "#To be absolutely sure, let's look at the fourth month and make sure it doesn't pass. \n",
+    "\n",
+    "fourth_month_df =df.loc[  (df[\"datetime_date\"] <= (march_1_2025 - datetime.timedelta(days = (3)*30)) ) & (df[\"datetime_date\"] >= (march_1_2025 - datetime.timedelta(days = 4*30))) ]\n",
+    "\n",
+    "overall_pop = df[\"viewCount\"] \n",
+    "fourth_month = fourth_month_df[\"viewCount\"]\n",
+    "\n",
+    "t_stat, p_value = stats.ttest_ind( overall_pop, fourth_month ) \n",
+    "print(p_value) \n",
+    "\n",
+    "#Conclusion: Yes, the fourth month doesn't pass, as expected. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "6f55b445-7979-4da8-afac-d6db41cb8066",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5224174726675391\n"
+     ]
+    }
+   ],
+   "source": [
+    "#As a final sanity check, let's see if the last month has significantly higher views, seeing that is was out the longest. \n",
+    "\n",
+    "last_month_df =df.loc[  (df[\"datetime_date\"] <= (march_1_2025 - datetime.timedelta(days = (11)*30)) ) & (df[\"datetime_date\"] >= (march_1_2025 - datetime.timedelta(days = 12*30))) ]\n",
+    "\n",
+    "overall_pop = df[\"viewCount\"] \n",
+    "last_month = last_month_df[\"viewCount\"]\n",
+    "\n",
+    "t_stat, p_value = stats.ttest_ind( overall_pop, last_month ) \n",
+    "print(p_value) \n",
+    "\n",
+    "#Conclusion: No, the last month does not have a weird number of views! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75711799-10fb-4afa-9bc1-819f9e0d6170",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Okay I want to do a little more to figure out if we should exclude the third month.\n",
+    "#We basically know that yes, the third month has lower views.\n",
+    "#But does it have *practically* lower views? \n",
+    "#Well.... we *could* ask this question, but I have no way of knowing how many views would constitute practically lower views.\n",
+    "#So to be prudent we will just exclude the first 90 days. We have tons of data so this shouldn't be a problem."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "id": "313d0f39-77f7-4452-892d-6b892fb90e5a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df = df.loc[ (df[\"datetime_date\"] <= (march_1_2025 - datetime.timedelta(days = 8*7)))]\n",
+    "final_df = df.loc[ (df[\"datetime_date\"] <= (march_1_2025 - datetime.timedelta(days = 90)))]\n",
     "final_df[\"datetime_date\"]\n",
     "\n",
     "#We are missing the ad features from this data set. We are adding them here at the last minute. \n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "final_df.to_csv(\"no_early_dates.csv\")"
+    "final_df.to_csv(\"no_early_dates_90_days.csv\")"
    ]
   },
   {
