--- a/Modelling/Views_models.ipynb
+++ b/Modelling/Views_models.ipynb
@@ -10,72 +10,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "6540735a-9ca7-4f9f-bb48-b0e2bb6d189f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Unnamed: 0.3', 'Unnamed: 0.2', 'Unnamed: 0.1', 'Unnamed: 0',\n",
-       "       'channelDescription', 'channelJoinedDate', 'channelTotalVideos',\n",
-       "       'channelTotalViews', 'channelUsername', 'commentsCount', 'date',\n",
-       "       'duration', 'id', 'isChannelVerified', 'likes', 'numberOfSubscribers',\n",
-       "       'order', 'text', 'title', 'url', 'viewCount', 'likes_per_subscriber',\n",
-       "       'comments_per_subscriber', 'views_per_subscriber',\n",
-       "       'duration_in_seconds', 'datetime_date', 'hashtags', 'comm_to_views',\n",
-       "       'likes_to_views', 'popular_brand', 'has_title_affiliate',\n",
-       "       'has_description_affiliate', 'has_channel_description_affiliate',\n",
-       "       'has_any_affiliate', 'has_business_inquiry',\n",
-       "       'engagement_per_subscriber', 'product', 'budget', 'self_ref', 'acronym',\n",
-       "       'korean', 'speed', 'skills/teach', 'skincare', 'comparing_products',\n",
-       "       'datetime', 'hour', 'day_of_week', 'month', 'year', 'day_name',\n",
-       "       'engagement_rate', 'prime_time', 'cluster1', 'prime_time1',\n",
-       "       'posting_time_category', 'prime_hour', 'hasAdinTitle', 'hasAdinText'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_csv(r\"no_early_dates.csv\")"
+    "df = pd.read_csv(r\"no_early_dates_90_days.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "a7c69868-7f1b-4f87-99df-50c03fc443bc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['popular_brand', 'has_any_affiliate', 'product', 'budget', 'self_ref',\n",
-       "       'acronym', 'korean', 'speed', 'skills/teach', 'skincare',\n",
-       "       'comparing_products', 'prime_hour', 'hashtags', 'hasAdinTitle',\n",
-       "       'hasAdinText'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "can only concatenate list (not \"str\") to list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m features \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpopular_brand\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_any_affiliate\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mproduct\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbudget\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mself_ref\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124macronym\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkorean\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mspeed\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mskills/teach\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mskincare\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcomparing_products\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprime_hour\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhashtags\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhasAdinTitle\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhasAdinText\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#Create the target column $y$ here \u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m df \u001b[38;5;241m=\u001b[39m df[ features \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m ] \n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m#Create the target column $y$ here:\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m#We don't need a lot of the noise columns\u001b[39;00m\n\u001b[0;32m     10\u001b[0m df \u001b[38;5;241m=\u001b[39m df[ features \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m ]\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate list (not \"str\") to list"
+     ]
     }
    ],
    "source": [
     "features = [\"popular_brand\", \"has_any_affiliate\", \"product\", \"budget\", \"self_ref\", \"acronym\", \"korean\", \"speed\", \"skills/teach\", \"skincare\", \"comparing_products\", \"prime_hour\", \"hashtags\", \"hasAdinTitle\", \"hasAdinText\"]\n",
     "\n",
-    "#Create the target column $y$ here \n",
-    "\n",
-    "df = df[ features + \"y\" ] \n",
-    "\n",
     "#Create the target column $y$ here:\n",
+    "\n",
     "\n",
     "#We don't need a lot of the noise columns\n",
     "df = df[ features + \"y\" ] "
