Finished model with interaction terms

--- a/Modelling/Engagement_models.ipynb
+++ b/Modelling/Engagement_models.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "98f96210-9b6b-4589-ae6a-be7b219121e9",
    "metadata": {},
    "outputs": [],
@@ -24,17 +24,42 @@
     "\n",
     "#Create the target column $y$ here \n",
     "\n",
-    "df = df[ features + \"y\" ] "
+    "df[\"y\"] = (df[\"likes\"] + df[\"commentsCount\"])  / (df[\"viewCount\"] + 1) \n",
+    "\n",
+    "#get rid of noisy columns\n",
+    "df = df[ features + [\"y\"] ] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "42cf1fcf-3422-4167-9ed1-d695d3e8c59a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import everything\n",
+    "\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.pipeline import Pipeline \n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import root_mean_squared_error\n",
+    "from sklearn.model_selection import train_test_split\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "bea5e3ea-744f-4ea3-a082-27bb47cd1ac2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Do an 80-20 Train Test Split Here. Never ever touch the testing set please!"
+    "#Do an 80-20 Train Test Split Here. Never ever touch the testing set please!\n",
+    "\n",
+    "df_train, df_test = train_test_split(df, shuffle = True, test_size = .2) #We can't stratify because we have too many categorical features. I hope this is ok\n",
+    "#DO NOT TOUCH THE ABOVE X_TEST VARIABLE FOR ANY REASON\n",
+    "\n",
+    "#We want a very basic idea of the MSE for each model, before we do proper cross-validation. We use a secondary split for this.\n",
+    "df_tt, df_ho = train_test_split(df_train, shuffle = True, test_size = .2)\n"
    ]
   },
   {
@@ -69,12 +94,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "39edb992-3082-4415-a155-dbd36c360774",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.030581120236956607\n"
+     ]
+    }
+   ],
    "source": [
-    "#Create a model whose features include all interaction terms "
+    "#Create a model whose features include all interaction terms\n",
+    "pipe = Pipeline([  (\"interaction terms\", PolynomialFeatures(degree = 2, interaction_only = True, include_bias = False) ),\n",
+    "                   (\"linear model\", LinearRegression())\n",
+    "]) \n",
+    "#setting degree = 2 creates all pairwise interaction terms. \n",
+    "\n",
+    "pipe.fit( df_tt[features], df_tt[\"y\"]) \n",
+    "pred = pipe.predict( df_ho[features] )\n",
+    "\n",
+    "print( root_mean_squared_error( df_ho[\"y\"], pred) ) "
    ]
   },
   {
