--- a/Modelling/Views_models.ipynb
+++ b/Modelling/Views_models.ipynb
@@ -5,58 +5,118 @@
    "id": "e5e37523-42d1-466e-8490-cb4b6931b933",
    "metadata": {},
    "source": [
-    "In this notebook, we will create and compare several models. Our target feature for this notebooks is LOG(VIEWS/SUBSCRIBER.) \n"
+    "# In this notebook, we will create and compare several models. Our target feature for this notebooks is LOG(VIEWS/SUBSCRIBERS))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "6540735a-9ca7-4f9f-bb48-b0e2bb6d189f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "df = pd.read_csv(r\"no_early_dates_90_days.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a7c69868-7f1b-4f87-99df-50c03fc443bc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "can only concatenate list (not \"str\") to list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m features \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpopular_brand\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_any_affiliate\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mproduct\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbudget\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mself_ref\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124macronym\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkorean\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mspeed\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mskills/teach\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mskincare\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcomparing_products\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprime_hour\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhashtags\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhasAdinTitle\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhasAdinText\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#Create the target column $y$ here \u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m df \u001b[38;5;241m=\u001b[39m df[ features \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m ] \n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m#Create the target column $y$ here:\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m#We don't need a lot of the noise columns\u001b[39;00m\n\u001b[0;32m     10\u001b[0m df \u001b[38;5;241m=\u001b[39m df[ features \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m ]\n",
-      "\u001b[1;31mTypeError\u001b[0m: can only concatenate list (not \"str\") to list"
-     ]
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0.3', 'Unnamed: 0.2', 'Unnamed: 0.1', 'Unnamed: 0',\n",
+       "       'channelDescription', 'channelJoinedDate', 'channelTotalVideos',\n",
+       "       'channelTotalViews', 'channelUsername', 'commentsCount', 'date',\n",
+       "       'duration', 'id', 'isChannelVerified', 'likes', 'numberOfSubscribers',\n",
+       "       'order', 'text', 'title', 'url', 'viewCount', 'likes_per_subscriber',\n",
+       "       'comments_per_subscriber', 'views_per_subscriber',\n",
+       "       'duration_in_seconds', 'datetime_date', 'hashtags', 'comm_to_views',\n",
+       "       'likes_to_views', 'popular_brand', 'has_title_affiliate',\n",
+       "       'has_description_affiliate', 'has_channel_description_affiliate',\n",
+       "       'has_any_affiliate', 'has_business_inquiry',\n",
+       "       'engagement_per_subscriber', 'product', 'budget', 'self_ref', 'acronym',\n",
+       "       'korean', 'speed', 'skills/teach', 'skincare', 'comparing_products',\n",
+       "       'datetime', 'hour', 'day_of_week', 'month', 'year', 'day_name',\n",
+       "       'engagement_rate', 'prime_time', 'cluster1', 'prime_time1',\n",
+       "       'posting_time_category', 'prime_hour', 'hasAdinTitle', 'hasAdinText'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "features = [\"popular_brand\", \"has_any_affiliate\", \"product\", \"budget\", \"self_ref\", \"acronym\", \"korean\", \"speed\", \"skills/teach\", \"skincare\", \"comparing_products\", \"prime_hour\", \"hashtags\", \"hasAdinTitle\", \"hasAdinText\"]\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import math \n",
     "\n",
-    "#Create the target column $y$ here:\n",
+    "df = pd.read_csv(r\"no_early_dates_90_days.csv\")\n",
+    "df.columns\n",
     "\n",
-    "\n",
-    "#We don't need a lot of the noise columns\n",
-    "df = df[ features + \"y\" ] "
+    "#PLEASE NOTE THAT THE HASHTAGS COLUMN CURRENTLY HAS THE NUMBER OF HASHTAGS USED, AND IS NOT A CATEGORICAL VARIABLE. \n",
+    "#WHEN CONSIDERING INTERACTION TERMS PLEASE ONLY INCLUDE PAIRWISE INTERACTION TERMS. More interaction terms than this would create extremely small and nonexistent categories which we do not want."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "a7c69868-7f1b-4f87-99df-50c03fc443bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Don't run this cell more than once\n",
+    "\n",
+    "features = [\"popular_brand\", \"has_any_affiliate\", \"product\", \"budget\", \"self_ref\", \"acronym\", \"korean\", \"speed\", \"skills/teach\", \"skincare\", \"comparing_products\", \"prime_hour\", \"hashtags\", \"hasAdinTitle\", \"hasAdinText\"]\n",
+    "\n",
+    "#Create the target column $y$ here:\n",
+    "df[\"y\"] = df[\"views_per_subscriber\"].apply( math.log )\n",
+    "\n",
+    "#We don't need a lot of the noise columns\n",
+    "df = df[ features + [\"y\"] ] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "174ee18d-50d9-4f5d-b30b-a78281db3cf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['popular_brand', 'has_any_affiliate', 'product', 'budget', 'self_ref',\n",
+       "       'acronym', 'korean', 'speed', 'skills/teach', 'skincare',\n",
+       "       'comparing_products', 'prime_hour', 'hashtags', 'hasAdinTitle',\n",
+       "       'hasAdinText', 'y'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Import everything\n",
+    "\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.pipeline import Pipeline \n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import root_mean_squared_error\n",
+    "from sklearn.model_selection import train_test_split\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "b2dff4f7-65bd-4f28-abfc-833d304078b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Do an 80-20 Train Test Split Here. Never ever touch the testing set please!"
+    "#Do an 80-20 Train Test Split Here. Never ever touch the testing set please!\n",
+    "cat_features = [\"popular_brand\", \"has_any_affiliate\", \"product\", \"budget\", \"self_ref\", \"acronym\", \"korean\", \"speed\", \"skills/teach\", \"skincare\", \"comparing_products\", \"prime_hour\", \"hasAdinTitle\", \"hasAdinText\"]\n",
+    "#The above is just everything except \"hashtags\"\n",
+    "\n",
+    "df_train, df_test = train_test_split(df, shuffle = True, test_size = .2) #We can't stratify because we have too many categorical features. I hope this is ok\n",
+    "#DO NOT TOUCH THE ABOVE X_TEST VARIABLE FOR ANY REASON\n",
+    "\n",
+    "#We want a very basic idea of the MSE for each model, before we do proper cross-validation. We use a secondary split for this.\n",
+    "df_tt, df_ho = train_test_split(df_train, shuffle = True, test_size = .2)\n"
    ]
   },
   {
@@ -91,12 +151,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "28f85933-593b-4710-844a-0a1c7bc5436d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5171431164681317\n"
+     ]
+    }
+   ],
    "source": [
-    "#Create a model whose features include all interaction terms "
+    "#Create a model whose features include all interaction terms \n",
+    "pipe = Pipeline([  (\"interaction terms\", PolynomialFeatures(degree = 2, interaction_only = True, include_bias = False) ),\n",
+    "                   (\"linear model\", LinearRegression())\n",
+    "]) \n",
+    "#setting degree = 2 creates all pairwise interaction terms. \n",
+    "\n",
+    "pipe.fit( df_tt[features], df_tt[\"y\"]) \n",
+    "pred = pipe.predict( df_ho[features] )\n",
+    "\n",
+    "print( root_mean_squared_error( df_ho[\"y\"], pred) ) "
    ]
   },
   {
@@ -126,15 +203,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Final interpretation "
+    "#Final interpretation. We'll look at coefficients for our best model and compare. "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (Erdos Institute)",
    "language": "python",
-   "name": "python3"
+   "name": "erdos_spring_2025"
   },
   "language_info": {
    "codemirror_mode": {
@@ -146,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
