--- a/Modelling/Views_models.ipynb
+++ b/Modelling/Views_models.ipynb
@@ -136,7 +136,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Creat the basic linear regression model here "
+    "#Create the basic linear regression model here \n",
+    "model = LinearRegression()\n",
+    "model.fit(df_tt[features], df_tt[\"y\"])\n",
+    "# Evaluate the model\n",
+    "y_pred = model.predict(df_ho[features])\n",
+    "rmse = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
+    "r2 = r2_score(df_ho[\"y\"], y_pred)\n",
+    "print(f\"Root Mean Squared Error (Log Views): {rmse:.6f}\")\n",
+    "print(f\"R-squared: {r2:.4f}\")"
    ]
   },
   {
