--- a/Modelling/Engagement_models.ipynb
+++ b/Modelling/Engagement_models.ipynb
@@ -79,7 +79,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Creat the basic linear regression model here "
+    "#Creat the basic linear regression model here \n",
+    "###Fitting the basic linear regression model using the training set and print the summary of the model.\n",
+    "model = LinearRegression()\n",
+    "model.fit(df_tt[features], df_tt[\"y\"])\n",
+    "# Evaluate the model\n",
+    "y_pred = model.predict(df_ho[features])\n",
+    "rmse = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
+    "r2 = r2_score(df_ho[\"y\"], y_pred)\n",
+    "print(f\"Root Mean Squared Error: {rmse:.6f}\")\n",
+    "print(f\"R-squared: {r2:.4f}\")\n"
    ]
   },
   {
