--- a/Modelling/Engagement_models.ipynb
+++ b/Modelling/Engagement_models.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "98f96210-9b6b-4589-ae6a-be7b219121e9",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "42cf1fcf-3422-4167-9ed1-d695d3e8c59a",
    "metadata": {},
    "outputs": [],
@@ -42,29 +42,29 @@
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.pipeline import Pipeline \n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import root_mean_squared_error\n",
+    "from sklearn.metrics import root_mean_squared_error, r2_score\n",
     "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "bea5e3ea-744f-4ea3-a082-27bb47cd1ac2",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Do an 80-20 Train Test Split Here. Never ever touch the testing set please!\n",
     "\n",
-    "df_train, df_test = train_test_split(df, shuffle = True, test_size = .2) #We can't stratify because we have too many categorical features. I hope this is ok\n",
+    "df_train, df_test = train_test_split(df, shuffle = True, test_size = .2, random_state = 42) #We can't stratify because we have too many categorical features. I hope this is ok\n",
     "#DO NOT TOUCH THE ABOVE X_TEST VARIABLE FOR ANY REASON\n",
     "\n",
     "#We want a very basic idea of the MSE for each model, before we do proper cross-validation. We use a secondary split for this.\n",
-    "df_tt, df_ho = train_test_split(df_train, shuffle = True, test_size = .2)\n"
+    "df_tt, df_ho = train_test_split(df_train, shuffle = True, test_size = .2, random_state = 42)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "13d86438-aae7-4433-8644-e26d56daae6f",
    "metadata": {},
    "outputs": [],
@@ -74,10 +74,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "fc720b8d-d4a5-41ed-8e0c-cce7dfb81885",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error: 0.036916\n",
+      "R-squared: 0.0134\n"
+     ]
+    }
+   ],
    "source": [
     "#Creat the basic linear regression model here \n",
     "###Fitting the basic linear regression model using the training set and print the summary of the model.\n",
@@ -88,12 +97,12 @@
     "rmse = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
     "r2 = r2_score(df_ho[\"y\"], y_pred)\n",
     "print(f\"Root Mean Squared Error: {rmse:.6f}\")\n",
-    "print(f\"R-squared: {r2:.4f}\")\n"
+    "print(f\"R-squared: {r2:.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "3e891559-d14a-47a2-af18-a5363af7e60b",
    "metadata": {},
    "outputs": [],
@@ -103,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "39edb992-3082-4415-a155-dbd36c360774",
    "metadata": {},
    "outputs": [
@@ -111,7 +120,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.030581120236956607\n"
+      "0.035352592176074026\n"
      ]
     }
    ],
@@ -130,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "b43452cc-12d0-4ac3-882b-d7942693d0e9",
    "metadata": {},
    "outputs": [],
@@ -140,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "2e6b6f89-6217-41e4-a47e-b0f06f1ec11b",
    "metadata": {},
    "outputs": [],
@@ -150,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "7dd1bfe5-da0d-4074-969c-8aacea12ba04",
    "metadata": {},
    "outputs": [],
@@ -161,9 +170,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (Erdos Institute)",
    "language": "python",
-   "name": "python3"
+   "name": "erdos_spring_2025"
   },
   "language_info": {
    "codemirror_mode": {
@@ -175,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
