--- a/Modelling/Views_models.ipynb
+++ b/Modelling/Views_models.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "id": "6540735a-9ca7-4f9f-bb48-b0e2bb6d189f",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,14 +54,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "id": "a7c69868-7f1b-4f87-99df-50c03fc443bc",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Don't run this cell more than once\n",
     "\n",
-    "features = [\"popular_brand\", \"has_any_affiliate\", \"product\", \"budget\", \"self_ref\", \"acronym\", \"korean\", \"speed\", \"skills/teach\", \"skincare\", \"comparing_products\", \"prime_hour\", \"hashtags\", \"hasAdinTitle\", \"hasAdinText\"]\n",
+    "features = [\"popular_brand\", \"has_any_affiliate\", \"product\", \"budget\", \"self_ref\", \"acronym\", \"korean\", \"speed\", \n",
+    "            \"skills/teach\", \"skincare\", \"comparing_products\", \"prime_hour\", \"hashtags\", \"hasAdinTitle\", \"hasAdinText\"]\n",
     "\n",
     "#Create the target column $y$ here:\n",
     "df[\"y\"] = df[\"views_per_subscriber\"].apply( math.log )\n",
@@ -72,38 +73,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "id": "174ee18d-50d9-4f5d-b30b-a78281db3cf3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['popular_brand', 'has_any_affiliate', 'product', 'budget', 'self_ref',\n",
-       "       'acronym', 'korean', 'speed', 'skills/teach', 'skincare',\n",
-       "       'comparing_products', 'prime_hour', 'hashtags', 'hasAdinTitle',\n",
-       "       'hasAdinText', 'y'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Import everything\n",
     "\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.pipeline import Pipeline \n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import root_mean_squared_error\n",
+    "from sklearn.metrics import root_mean_squared_error, r2_score\n",
     "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "id": "b2dff4f7-65bd-4f28-abfc-833d304078b2",
    "metadata": {},
    "outputs": [],
@@ -112,16 +98,16 @@
     "cat_features = [\"popular_brand\", \"has_any_affiliate\", \"product\", \"budget\", \"self_ref\", \"acronym\", \"korean\", \"speed\", \"skills/teach\", \"skincare\", \"comparing_products\", \"prime_hour\", \"hasAdinTitle\", \"hasAdinText\"]\n",
     "#The above is just everything except \"hashtags\"\n",
     "\n",
-    "df_train, df_test = train_test_split(df, shuffle = True, test_size = .2) #We can't stratify because we have too many categorical features. I hope this is ok\n",
+    "df_train, df_test = train_test_split(df, shuffle = True, test_size = .2, random_state = 42) #We can't stratify because we have too many categorical features. I hope this is ok\n",
     "#DO NOT TOUCH THE ABOVE X_TEST VARIABLE FOR ANY REASON\n",
     "\n",
     "#We want a very basic idea of the MSE for each model, before we do proper cross-validation. We use a secondary split for this.\n",
-    "df_tt, df_ho = train_test_split(df_train, shuffle = True, test_size = .2)\n"
+    "df_tt, df_ho = train_test_split(df_train, shuffle = True, test_size = .2, random_state = 42)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "6428dbc1-d78e-47bb-9159-b42eea6a20d0",
    "metadata": {},
    "outputs": [],
@@ -131,10 +117,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "7a9c1ca4-fcb4-4c9c-a0f4-5e8990aab033",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error (Log Views): 1.538600\n",
+      "R-squared: 0.1210\n"
+     ]
+    }
+   ],
    "source": [
     "#Create the basic linear regression model here \n",
     "model = LinearRegression()\n",
@@ -149,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "4d31581e-3aa9-4b52-b749-9993cf3299f2",
    "metadata": {},
    "outputs": [],
@@ -159,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "id": "28f85933-593b-4710-844a-0a1c7bc5436d",
    "metadata": {},
    "outputs": [
@@ -167,7 +162,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.5171431164681317\n"
+      "1.5350861374865854\n"
      ]
     }
    ],
@@ -186,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "b12a5133-9cea-407b-b0db-d0b9503d0279",
    "metadata": {},
    "outputs": [],
@@ -196,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "4a48034c-5135-4a52-a6f3-57bb5d03c11b",
    "metadata": {},
    "outputs": [],
@@ -206,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "36e385db-e0eb-4064-8ade-eb7c7ebd404e",
    "metadata": {},
    "outputs": [],
