fixed base model submission

--- a/Modelling/Views_models.ipynb
+++ b/Modelling/Views_models.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "6540735a-9ca7-4f9f-bb48-b0e2bb6d189f",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "a7c69868-7f1b-4f87-99df-50c03fc443bc",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "174ee18d-50d9-4f5d-b30b-a78281db3cf3",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "b2dff4f7-65bd-4f28-abfc-833d304078b2",
    "metadata": {},
    "outputs": [],
@@ -107,17 +107,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "6428dbc1-d78e-47bb-9159-b42eea6a20d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error: 1.644687\n",
+      "R-squared: -0.0044\n"
+     ]
+    }
+   ],
    "source": [
-    "#Create the baseline model here"
+    "#Create the baseline model here\n",
+    "\n",
+    "class BaseMeanModel():\n",
+    "    def __init__(self):\n",
+    "        self.mean_value = None\n",
+    "    \n",
+    "    def fit(self, values : pd.Series):\n",
+    "        self.mean_value = values.mean()\n",
+    "\n",
+    "    def predict(self, inputs=None):\n",
+    "        if inputs is None:\n",
+    "            return self.mean_value\n",
+    "        return len(inputs) * [self.mean_value]\n",
+    "    \n",
+    "model = BaseMeanModel()\n",
+    "model.fit(df_tt[\"y\"])\n",
+    "\n",
+    "# R2 is negative because training set and the hold out set have different average values\n",
+    "y_pred = model.predict(df_ho[features])\n",
+    "rmse = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
+    "r2 = r2_score(df_ho[\"y\"], y_pred)\n",
+    "print(f\"Root Mean Squared Error: {rmse:.6f}\")\n",
+    "print(f\"R-squared: {r2:.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "7a9c1ca4-fcb4-4c9c-a0f4-5e8990aab033",
    "metadata": {},
    "outputs": [
@@ -144,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "id": "4d31581e-3aa9-4b52-b749-9993cf3299f2",
    "metadata": {},
    "outputs": [],
@@ -154,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "id": "28f85933-593b-4710-844a-0a1c7bc5436d",
    "metadata": {},
    "outputs": [
@@ -162,7 +193,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.5350861374865854\n"
+      "1.535086137486586\n"
      ]
     }
    ],
@@ -181,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "id": "b12a5133-9cea-407b-b0db-d0b9503d0279",
    "metadata": {},
    "outputs": [],
@@ -191,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "id": "4a48034c-5135-4a52-a6f3-57bb5d03c11b",
    "metadata": {},
    "outputs": [],
@@ -201,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "36e385db-e0eb-4064-8ade-eb7c7ebd404e",
    "metadata": {},
    "outputs": [],
@@ -212,9 +243,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (Erdos Institute)",
+   "display_name": "erdos_spring_2025",
    "language": "python",
-   "name": "erdos_spring_2025"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
