--- a/Modelling/Engagement_models.ipynb
+++ b/Modelling/Engagement_models.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "98f96210-9b6b-4589-ae6a-be7b219121e9",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "42cf1fcf-3422-4167-9ed1-d695d3e8c59a",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "bea5e3ea-744f-4ea3-a082-27bb47cd1ac2",
    "metadata": {},
    "outputs": [],
@@ -64,17 +64,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "13d86438-aae7-4433-8644-e26d56daae6f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error: 0.037166\n",
+      "R-squared: -0.0000\n"
+     ]
+    }
+   ],
    "source": [
-    "#Create the baseline model here"
+    "#Create the baseline model here\n",
+    "\n",
+    "class BaseMeanModel():\n",
+    "    def __init__(self):\n",
+    "        self.mean_value = None\n",
+    "    \n",
+    "    def fit(self, values : pd.Series):\n",
+    "        self.mean_value = values.mean()\n",
+    "\n",
+    "    def predict(self, inputs=None):\n",
+    "        if inputs is None:\n",
+    "            return self.mean_value\n",
+    "        return len(inputs) * [self.mean_value]\n",
+    "    \n",
+    "    \n",
+    "model = BaseMeanModel()\n",
+    "model.fit(df_tt[\"y\"])\n",
+    "\n",
+    "# R2 is negative because training set and the hold out set have different average values\n",
+    "y_pred = model.predict(df_ho[features])\n",
+    "rmse = root_mean_squared_error(df_ho[\"y\"], y_pred)\n",
+    "r2 = r2_score(df_ho[\"y\"], y_pred)\n",
+    "print(f\"Root Mean Squared Error: {rmse:.6f}\")\n",
+    "print(f\"R-squared: {r2:.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "fc720b8d-d4a5-41ed-8e0c-cce7dfb81885",
    "metadata": {},
    "outputs": [
@@ -102,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "3e891559-d14a-47a2-af18-a5363af7e60b",
    "metadata": {},
    "outputs": [],
@@ -112,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "39edb992-3082-4415-a155-dbd36c360774",
    "metadata": {},
    "outputs": [
@@ -120,7 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.035352592176074026\n"
+      "0.03535259217607404\n"
      ]
     }
    ],
@@ -139,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "b43452cc-12d0-4ac3-882b-d7942693d0e9",
    "metadata": {},
    "outputs": [],
@@ -149,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "2e6b6f89-6217-41e4-a47e-b0f06f1ec11b",
    "metadata": {},
    "outputs": [],
@@ -159,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "7dd1bfe5-da0d-4074-969c-8aacea12ba04",
    "metadata": {},
    "outputs": [],
@@ -170,9 +202,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (Erdos Institute)",
+   "display_name": "erdos_spring_2025",
    "language": "python",
-   "name": "erdos_spring_2025"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
