--- a/Modelling/Engagement_models.ipynb
+++ b/Modelling/Engagement_models.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "98f96210-9b6b-4589-ae6a-be7b219121e9",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "42cf1fcf-3422-4167-9ed1-d695d3e8c59a",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "bea5e3ea-744f-4ea3-a082-27bb47cd1ac2",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "13d86438-aae7-4433-8644-e26d56daae6f",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "fc720b8d-d4a5-41ed-8e0c-cce7dfb81885",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "3e891559-d14a-47a2-af18-a5363af7e60b",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "39edb992-3082-4415-a155-dbd36c360774",
    "metadata": {},
    "outputs": [
@@ -171,12 +171,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "b43452cc-12d0-4ac3-882b-d7942693d0e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Alpha: 0.0001\n",
+      "Test MSE: 0.001362, RMSE: 0.036912, MAE: 0.024071\n",
+      "R² Score: 0.013599, Explained Variance: 0.013606\n"
+     ]
+    }
+   ],
    "source": [
-    "#Create a model with all interaction terms and lasso regression "
+    "#Create a model with all interaction terms and lasso regression \n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LassoCV, Lasso\n",
+    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error, explained_variance_score\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(df_tt[features] )\n",
+    "X_test_scaled = scaler.transform( df_ho[features])\n",
+    "\n",
+    "alpha = 0.0001\n",
+    "lasso = Lasso(alpha=alpha, random_state=42, max_iter=10000)\n",
+    "\n",
+    "#cv_scores = cross_val_score(lasso, X_train_scaled, df_tt[\"y\"], cv=5,scoring='neg_mean_squared_error')\n",
+    "#cv_rmse = np.sqrt(-cv_scores.mean())\n",
+    "\n",
+    "lasso.fit(X_train_scaled, df_tt[\"y\"])\n",
+    "\n",
+    "y_pred = lasso.predict(X_test_scaled)\n",
+    "\n",
+    "# Calculate metrics\n",
+    "mse = mean_squared_error(df_ho[\"y\"], y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "mae = mean_absolute_error(df_ho[\"y\"], y_pred)\n",
+    "r2 = r2_score(df_ho[\"y\"], y_pred)\n",
+    "exp_var = explained_variance_score(df_ho[\"y\"], y_pred)\n",
+    "\n",
+    "\n",
+    "print(f\"\\nAlpha: {alpha}\")\n",
+    "print(f\"Test MSE: {mse:.6f}, RMSE: {rmse:.6f}, MAE: {mae:.6f}\")\n",
+    "print(f\"R² Score: {r2:.6f}, Explained Variance: {exp_var:.6f}\")\n",
+    "#print(f\"Cross-validated RMSE: {cv_rmse:.6f}\")\n",
+    "\n"
    ]
   },
   {
@@ -202,7 +247,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "erdos_spring_2025",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -216,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
