--- a/Modelling/Views_models.ipynb
+++ b/Modelling/Views_models.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "6540735a-9ca7-4f9f-bb48-b0e2bb6d189f",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "a7c69868-7f1b-4f87-99df-50c03fc443bc",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "174ee18d-50d9-4f5d-b30b-a78281db3cf3",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "b2dff4f7-65bd-4f28-abfc-833d304078b2",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "6428dbc1-d78e-47bb-9159-b42eea6a20d0",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "7a9c1ca4-fcb4-4c9c-a0f4-5e8990aab033",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "4d31581e-3aa9-4b52-b749-9993cf3299f2",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "28f85933-593b-4710-844a-0a1c7bc5436d",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.535086137486586\n"
+      "1.5350861374865856\n"
      ]
     }
    ],
@@ -212,12 +212,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "b12a5133-9cea-407b-b0db-d0b9503d0279",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Alpha: 0.0001\n",
+      "Test MSE: 2.367330, RMSE: 1.538613, MAE: 1.188627\n",
+      "R² Score: 0.120950, Explained Variance: 0.126585\n"
+     ]
+    }
+   ],
    "source": [
-    "#Create a model with all interaction terms and lasso regression "
+    "#Create a model with all interaction terms and lasso regression \n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LassoCV, Lasso\n",
+    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error, explained_variance_score\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(df_tt[features] )\n",
+    "X_test_scaled = scaler.transform( df_ho[features])\n",
+    "\n",
+    "\n",
+    "alpha = 0.0001\n",
+    "\n",
+    "lasso = Lasso(alpha=alpha, random_state=42, max_iter=10000)\n",
+    "\n",
+    "\n",
+    "lasso.fit(X_train_scaled, df_tt[\"y\"])\n",
+    "\n",
+    "y_pred = lasso.predict(X_test_scaled)\n",
+    "\n",
+    "# Calculate metrics\n",
+    "mse = mean_squared_error(df_ho[\"y\"], y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "mae = mean_absolute_error(df_ho[\"y\"] ,y_pred)\n",
+    "r2 = r2_score(df_ho[\"y\"], y_pred)\n",
+    "exp_var = explained_variance_score(df_ho[\"y\"], y_pred)\n",
+    "\n",
+    "print(f\"\\nAlpha: {alpha}\")\n",
+    "print(f\"Test MSE: {mse:.6f}, RMSE: {rmse:.6f}, MAE: {mae:.6f}\")\n",
+    "print(f\"R² Score: {r2:.6f}, Explained Variance: {exp_var:.6f}\")\n",
+    "\n"
    ]
   },
   {
@@ -243,7 +285,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "erdos_spring_2025",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -257,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
